# Auswahl

./: Cargo.toml  Readme.md
examples/: auswahlrc
src/: config.rs  main.rs
